# rosup

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
crates/rosup-cli/: Cargo.toml
crates/rosup-cli/src/: main.rs
crates/rosup-core/: Cargo.toml
crates/rosup-core/src/: builder.rs  condition.rs  config.rs  init.rs  lib.rs  manifest.rs  new.rs  overlay.rs  package_xml.rs  project.rs  runner.rs
crates/rosup-core/src/git/: sparse.rs
crates/rosup-core/src/resolver/: mod.rs  repos_file.rs  rosdep.rs  rosdistro.rs  store.rs
crates/rosup-core/tests/fixtures/package_xml/: condition_and_or.xml  condition_parens.xml  conditional_deps.xml  interleaved_depend.xml  manifest_base.xml  manifest_with_comments.xml  pkg_b.xml  with_version_constraints.xml
crates/rosup-core/tests/fixtures/repos/: sample.repos
crates/rosup-core/tests/fixtures/workspaces/autoware_deps/: .gitignore  rosup.toml
crates/rosup-core/tests/fixtures/workspaces/autoware_deps/src/mock_pkg/: CMakeLists.txt  package.xml
crates/rosup-core/tests/fixtures/workspaces/deep_exclude/src/b/tests/bench/pkg_y/: package.xml
crates/rosup-core/tests/fixtures/workspaces/mixed_non_ros/src/cuda_ffi/: Cargo.toml
crates/rosup-core/tests/fixtures/workspaces/sort_order/src/a_pkg/: package.xml
crates/rosup-tests/: Cargo.toml
crates/rosup-tests/src/: lib.rs  project.rs  shims.rs
crates/rosup-tests/tests/: build.rs  clean.rs  clone.rs  exclude.rs  init.rs  manifest.rs  new.rs  repos_source.rs  resolve.rs  run_launch.rs  search.rs  sync.rs  test_cmd.rs
crates/rox-cli/: Cargo.toml
crates/rox-cli/src/: main.rs
crates/rox-core/: Cargo.toml
crates/rox-core/src/: builder.rs  config.rs  init.rs  lib.rs  package_xml.rs  project.rs
crates/rox-core/src/resolver/: ament.rs  mod.rs  rosdep.rs  rosdistro.rs  store.rs
crates/rox-core/tests/fixtures/package_xml/: basic.xml  experimental_pkg.xml  manifest_multi_rclcpp.xml  pkg_a.xml  with_build_type.xml  with_dup_deps.xml
crates/rox-core/tests/fixtures/rosdistro/: humble-cache-sample.yaml
crates/rox-tests/: Cargo.toml
crates/rox-tests/src/: lib.rs  project.rs  shims.rs
crates/rox-tests/tests/: build.rs  clean.rs  clone.rs  init.rs  manifest.rs  resolve.rs  search.rs  test_cmd.rs
crates/shims/: Cargo.toml
docs/: known-issues.md
docs/design/: architecture.md  builder-architecture.md  colcon-build-architecture.md  colcon-install-layout.md  colcon-rewrite.md  dependency-model.md  lockfile.md  native-builder.md  pyo3-plugin-bridge.md  resolution-ssot.md  rosdep-resolve.md  source-repos.md
docs/features/: list.md  manifest-discovery.md  shell-completion.md  workspace-rescan.md
docs/phases/: 1-foundation.md  10-edge-case-tests.md  11-native-build.md  12-resolver-improvements.md  12-source-repos.md  13-resolver-improvements.md  2-init-and-manifest.md  3-dependency-resolution.md  4-build-and-test.md  5-search-and-clone.md  6-run-and-launch.md  7-integration-tests.md  8-workspace-auto-discovery.md  9-bugfixes.md
docs/reference/: cli.md  package-xml.md  rosdistro-cache.md  rosup-toml.md  rox-toml.md
docs/testing/: real-world-edge-cases.md
scripts/: test-workspace.sh
