[workspace]
resolver = "2"
members = ["crates/*", "crates/shims"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["jerry73204 <jerry73204@gmail.com>"]
repository = "https://github.com/jerry73204/rosup"
homepage = "https://github.com/jerry73204/rosup"
readme = "README.md"

[workspace.dependencies]
# Error handling
eyre = "0.6"
color-eyre = "0.6"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
quick-xml = { version = "0.37", features = ["serialize"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Filesystem
glob = "0.3"
dirs = "5"

# Network / compression
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
flate2 = "1"

# YAML
serde_yaml = "0.9"

# Testing
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
rstest = "0.24"
once_cell = "1"
serde_json = "1"

# Internal
rosup-core = { path = "crates/rosup-core", version = "0.1.0" }

[profile.dev-release]
inherits = "release"
debug = true
debug-assertions = true
