[package]
name = "rosup-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rosup"
path = "src/main.rs"

[dependencies]
rosup-core.workspace = true
clap.workspace = true
color-eyre.workspace = true
eyre.workspace = true
glob.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
