[package]
name = "rosup"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
description = "A Cargo-style package manager for ROS 2"
keywords = ["ros", "ros2", "robotics", "package-manager", "colcon"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/tests"]

[[bin]]
name = "rosup"
path = "src/main.rs"

[dependencies]
rosup-core.workspace = true
clap.workspace = true
clap_complete.workspace = true
color-eyre.workspace = true
eyre.workspace = true
glob.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
