[package]
name = "rosup-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eyre.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
quick-xml.workspace = true
glob.workspace = true
dirs.workspace = true
reqwest.workspace = true
flate2.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
