[package]
name = "rosup-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for rosup — a Cargo-style package manager for ROS 2"
keywords = ["ros", "ros2", "robotics", "package-manager", "colcon"]
categories = ["development-tools", "development-tools::build-utils"]
exclude = ["/tests"]

[dependencies]
eyre.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
toml_edit.workspace = true
quick-xml.workspace = true
glob.workspace = true
dirs.workspace = true
tempfile.workspace = true
reqwest.workspace = true
flate2.workspace = true
serde_yaml.workspace = true
sha2 = "0.11.0"

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
