[package]
name = "rosup-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
once_cell.workspace = true
serde_json.workspace = true
serde.workspace = true

[dev-dependencies]
rstest.workspace = true
