<?xml version="1.0"?>
<package format="3">
  <name>p</name>
  <version>0.1.0</version>
  <description>Stub package for testing</description>
  <maintainer email="x@x.com">X</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
